Initial structure of login form.

--- a/advancedCSS/index.html
+++ b/advancedCSS/index.html
@@ -18,6 +18,21 @@
                 <li class="dropdown-icon"><a href="javascript:void(0);" onclick="showMenu()">&#9776;</a></li>
             </ul>
         </nav>
+        <div class="container">
+            <aside>
+                    <form>
+                        <label>Username</label>
+                        <input type="text" placeholder="username">
+                        <label>Password</label>
+                        <input type="password" placeholder="password">
+                    </form>
+            </aside>
+            
+            <article>
+
+            </article>
+
+        </div>
         <h1>Advanced CSS</h1>
 
         <script>
