Finished the header of the page with a form and a embeed youtube video. make css classes for responsive design.

--- a/advancedCSS/index.html
+++ b/advancedCSS/index.html
@@ -18,22 +18,29 @@
                 <li class="dropdown-icon"><a href="javascript:void(0);" onclick="showMenu()">&#9776;</a></li>
             </ul>
         </nav>
-        <div class="container">
-            <aside>
+        <div class="container gradient-background">
+            <div class="row">
+                <div class="col-6">
+                    <div class="leftside-col">
+                        <h1 class="large">Crazy Radness</h1>
+                        <h1 class="large">Made for Developers</h1>
+                    </div>
                     <form>
-                        <label>Username</label>
-                        <input type="text" placeholder="username">
-                        <label>Password</label>
-                        <input type="password" placeholder="password">
+                        <div class="leftside-col">
+                            <h2>Username</h2>
+                            <input class="input-box" name="username" type="text" placeholder="username">
+                            <h2>Password</h2>
+                            <input class="input-box" name="password" type="password" placeholder="password">
+                        </div>
                     </form>
-            </aside>
-            
-            <article>
-
-            </article>
-
+                </div>
+                <div class="col-6">
+                    <div class="rightside-col video-container">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/oB8jN68KGcU" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
         </div>
-        <h1>Advanced CSS</h1>
 
         <script>
             function showMenu()
