--- a/advancedCSS/index.html
+++ b/advancedCSS/index.html
@@ -42,6 +42,23 @@
             </div>
         </div>
 
+        <header>
+            <h1 class="header-section">The Standards of Awesomeness</h1>
+        </header>
+        <div class="container">
+            <div class="row">
+                <div class="col-4">
+                    <div class="box">
+                        <div class="box">
+                            
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4"></div>
+                <div class="col-4"></div>
+            </div>
+        </div>
+
         <script>
             function showMenu()
             {
