--- a/advancedCSS/index.html
+++ b/advancedCSS/index.html
@@ -49,13 +49,31 @@
             <div class="row">
                 <div class="col-4">
                     <div class="box">
-                        <div class="box">
-                            
+                        <div class="icon">
+                            <img src="dev-icon.png">
                         </div>
+                        <label>Chat with me</label>
+                        <p>Mussum Ipsum, cacilds vidis litro abertis. Si num tem leite então bota uma pinga aí cumpadi! Per aumento de cachacis, eu reclamis.</p>
                     </div>
                 </div>
-                <div class="col-4"></div>
-                <div class="col-4"></div>
+                <div class="col-4">
+                    <div class="box">
+                        <div class="icon">
+                            <img src="dev-icon.png">
+                        </div>
+                        <label>Learn to Code</label>
+                        <p>Mussum Ipsum, cacilds vidis litro abertis. Si num tem leite então bota uma pinga aí cumpadi! Per aumento de cachacis, eu reclamis.</p>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="box">
+                        <div class="icon">
+                            <img src="dev-icon.png">
+                        </div>
+                        <label>Build an Empire</label>
+                        <p>Mussum Ipsum, cacilds vidis litro abertis. Si num tem leite então bota uma pinga aí cumpadi! Per aumento de cachacis, eu reclamis.</p>
+                    </div>
+                </div>
             </div>
         </div>
 
