--- a/advancedCSS/index.html
+++ b/advancedCSS/index.html
@@ -75,6 +75,11 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-12">
+                    <button class="learn-more">Learn More</button>
+                </div>
+            </div>
         </div>
 
         <script>
