Finished the article and image settings. Desktop version and mobile is workgin.

--- a/advancedCSS/index.html
+++ b/advancedCSS/index.html
@@ -82,6 +82,26 @@
             </div>
         </div>
 
+        <hr>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-7">
+                    <article>
+                        <p>Mussum Ipsum, cacilds vidis litro abertis. Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis. Si u mundo tá muito paradis? Toma um mé que o mundo vai girarzis! Posuere libero varius. Nullam a nisl ut ante blandit hendrerit. Aenean sit amet nisi. Paisis, filhis, espiritis santis. Diuretics paradis num copo é motivis de denguis. A ordem dos tratores não altera o pão duris. Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose. Praesent vel viverra nisi. Mauris aliquet nunc non turpis scelerisque, eget. Interagi no mé, cursus quis, vehicula ac nisi. Cevadis im ampola pa arma uma pindureta. Mé faiz elementum girarzis, nisi eros vermeio. Detraxit consequat et quo num tendi nada.</p>
+                    </article>
+                </div>
+                <div class="col-5">
+                    <div class="slope-icon">
+                        <img src="IOS-Slope.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
         <script>
             function showMenu()
             {
