Finished the full site. Last part adding the footer.

--- a/advancedCSS/index.html
+++ b/advancedCSS/index.html
@@ -99,7 +99,46 @@
             </div>
         </div>
 
+        <footer class="footsy">
+            <div class="row">
 
+                <div class="col-3 mobile-stack">
+                    <h1>Company</h1>
+                    <ul>
+                        <li>About</li>
+                        <li>Blog</li>
+                        <li>Carrers</li>
+                    </ul>
+                </div>
+
+                <div class="col-3 mobile-stack">
+                    <h1>Products</h1>
+                    <ul>
+                        <li>Computers</li>
+                        <li>Ipads</li>
+                        <li>Iphones</li>
+                    </ul>
+                </div>
+
+                <div class="col-3 mobile-stack">
+                    <h1>Learn More</h1>
+                    <ul>
+                        <li>Developers</li>
+                        <li>Designers</li>
+                        <li>Programmers</li>
+                    </ul>
+                </div>
+
+                <div class="col-3 mobile-stack">
+                    <h1>Support</h1>
+                    <ul>
+                        <li>Help</li>
+                        <li>QA</li>
+                        <li>Contact</li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
 
 
         <script>
