now the exercise it is working. I'm still having some dificulty to understand all the questions that has been made, but all the calculation is working.!

--- a/helloJavascript/index.html
+++ b/helloJavascript/index.html
@@ -15,11 +15,11 @@
 						</div>
 						<form id="form">
 							<select id="options">
-								<option value="1">What is Y% of X?</option>
-								<option value="2">X is Y% of what?</option>
-								<option value="3">what % of X is Y?</option>
-								<option value="4">X% of what is Y?</option>
-								<option value="5">Y% of X is what?</option>
+								<option value="1">What is P% of X?</option> <!-- want to know the result of Y-->
+								<option value="2">Y is P% of what?</option> <!-- want to know the result of X -->
+								<option value="3">what P% of X is Y?</option> <!-- want to know the result of P -->
+								<option value="4">P% of what is Y?</option> <!-- want to know the result of X -->
+								<option value="5">P% of X is what?</option> <!-- want to know the result of Y -->
 							</select><br><br>
 							First number:<br><br>
 							<input type="number" id="n1"><br><br>
