add the logo Image, the form fields, and some styles.

--- a/starterTemplate/index.html
+++ b/starterTemplate/index.html
@@ -21,7 +21,15 @@
             <div class="col-8">
                 <div class="card sigin-card">
                     <div class="card-body">
-                        This
+                        <img class="img-fluid sigin-img" src="assets/DevslopesLogo.png">
+                        <form class="sigin-form">
+                            <div class="form-group">
+                                <input type="text" class="form-control" id="emailInput" placeholder="Email">
+                            </div>
+                            <div class="form-group">
+                                <input type="password" class="form-control" id="passwordInput" placeholder="Password">
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
