--- a/starterTemplate/index.html
+++ b/starterTemplate/index.html
@@ -13,25 +13,33 @@
     <title>Login Portal</title>
 
   </head>
-  <body class="sigin-body">
+  <body class="signin-body">
 
-    <div class="container sigin-container">
+    <div class="container signin-container">
         <div class="row">
             <div class="col"></div>
             <div class="col-8">
-                <div class="card sigin-card">
+                <div class="card signin-card">
                     <div class="card-body">
-                        <img class="img-fluid sigin-img" src="assets/DevslopesLogo.png">
-                        <form class="sigin-form">
+                        <img class="img-fluid signin-img" src="assets/DevslopesLogo.png">
+                        <form class="signin-form">
                             <div class="form-group">
                                 <input type="text" class="form-control" id="emailInput" placeholder="Email">
                             </div>
                             <div class="form-group">
                                 <input type="password" class="form-control" id="passwordInput" placeholder="Password">
                             </div>
+                            <div class="form-group">
+                                <button type="submit" class="btn signin-btn btn-lg">Sign In</button>
+                            </div>
+                            <div class="form-check">
+                                <input type="checkbox" class="form-check-input" id="rememberMe">
+                                <label class="form-check-label" for="rememberMe">Remember Me <a href="#" class="signin-link-need-help">Need Help?</a></label>
+                            </div>
                         </form>
                     </div>
                 </div>
+                <a href="#" class="create-new-account">Create new account</a>
             </div>
             <div class="col"></div>
         </div>
