--- a/skateOrDieProject/index.html
+++ b/skateOrDieProject/index.html
@@ -121,13 +121,50 @@
         <div class="row">
           <div class="col-sm-12">
             <div class="cool-stuff-wrapper">
-              <button class="btn btn-lg cool-stuff-btn">Get Cool Stuff</button>
+              <button class="btn btn-lg cool-stuff-btn" data-toggle="modal" data-target="#ExclusiveContent">Get More Stuff</button>
             </div>
           </div>
         </div>
       </div>
     </div> <!-- end div of container-fluid -->
 
+    <!-- Modal -->
+    <div class="modal fade" id="ExclusiveContent" tabindex="-1" role="dialog" aria-labelledby="ExclusiveContent" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="ExclusiveContent">Get Exclusive Content!</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-sm-12">
+                  <img class="img-fluid" src="./assets/KFS_modal.png">
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-12">
+                <form>
+                  <div class="form-group">
+                    <label for="yourName">What's your name?</label>
+                    <input type="text" class="form-control" id="yourName" placeholder="Name">
+                  </div>
+                  <div class="form-group">
+                    <label for="yourEmail">Where should we send your cool content?</label>
+                    <input type="email" class="form-control" id="yourEmail" aria-describedby="emailHelp" placeholder="Email">
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="./js/bootstrap.bundle.min.js"></script>
