create a row with photos and button at the bottom.

--- a/skateOrDieProject/index.html
+++ b/skateOrDieProject/index.html
@@ -126,6 +126,40 @@
           </div>
         </div>
       </div>
+
+      <!-- section three photos column -->
+      <div class="section-ligth">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="row">
+              <div class="col-sm-12 col-lg-4">
+                <img class="img-fluid img-center" src="./assets/kickflip.jpg">
+                <div class="row">
+                  <div class="col-sm-12">
+                    <button class="btn btn-lg btn-danger btn-center">Kickflip</button>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-12 col-lg-4">
+                <img class="img-fluid img-center" src="./assets/360flip.jpg">
+                <div class="row">
+                  <div class="col-sm-12">
+                    <button class="btn btn-lg btn-danger btn-center">360 Flip</button>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-12 col-lg-4">
+                <img class="img-fluid img-center" src="./assets/bscrook.jpg">
+                <div class="row">
+                  <div class="col-sm-12">
+                    <button class="btn btn-lg btn-danger btn-center">BS Crook</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div> <!-- end div of container-fluid -->
 
     <!-- Modal -->
@@ -147,16 +181,18 @@
               </div>
               <div class="row">
                 <div class="col-sm-12">
-                  <form>
-                    <div class="form-group">
-                      <label for="yourName">What's your name?</label>
-                      <input type="text" class="form-control" id="yourName" placeholder="Name">
-                    </div>
-                    <div class="form-group">
-                      <label for="yourEmail">Where should we send your cool content?</label>
-                      <input type="email" class="form-control" id="yourEmail" aria-describedby="emailHelp" placeholder="Email">
-                    </div>
-                  </form>
+                  <div class="form-wrapper">
+                    <form>
+                      <div class="form-group">
+                        <label for="yourName">What's your name?</label>
+                        <input type="text" class="form-control" id="yourName" placeholder="Name">
+                      </div>
+                      <div class="form-group">
+                        <label for="yourEmail">Where should we send your cool content?</label>
+                        <input type="email" class="form-control" id="yourEmail" aria-describedby="emailHelp" placeholder="Email">
+                      </div>
+                    </form>
+                  </div>
                 </div>
               </div>
             </div>
