--- a/introSASS/index.html
+++ b/introSASS/index.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
 <html>
+
     <head>
         <meta charset="utf-8">
-        <title>SASS</title>
-        <link rel="stylesheet" href="./_styles/styles.css">
+        <title>So Cool</title>
+        <link rel="stylesheet" href="./_styles/styles.css" />
     </head>
 
     <body>
-        <h1>I'm feeling <span>Saaasy!!</span></h1>
-        <div class="circle">
-            <div class="square"></div>
+        <div class="thumb1">
+            <h1>What's up?</h1>
         </div>
-        <div class="square"></div>
+        <section>
+            <h2>Can you read this?</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </section>
+        <br />
+        <section>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </section>
+        <div class="thumb2"></div>
+        <br />
+        <br />
+        <button class="btn-1">Touch To SASS</button>
+        <br />
+        <button class="btn-2">SASSY</button>
     </body>
+
 </html>
